--- a/src/pages/categorias/categorias.scss
+++ b/src/pages/categorias/categorias.scss
@@ -101,7 +101,7 @@ page-categorias {
     }
 
     .label-md {
-        color: blue;
+        color: rgb(34, 34, 34);
     }
 
     .fixed-content {
