--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -84,4 +84,8 @@ page-home {
         border-color: #fff;
         color: #fff;
     }
+    .btn-recuperar {
+        margin-top: 10px;
+        background: rgba(196, 193, 193, 0.5);
+    }
 }
