--- a/src/pages/produto-detail/produto-detail.scss
+++ b/src/pages/produto-detail/produto-detail.scss
@@ -15,4 +15,19 @@ page-produto-detail {
     .toolbar[transparent] .toolbar-background {
         background-color: rgb(0, 39, 56);
     }
+    .content-md {
+        color: #000;
+        background-color: aliceblue;
+    }
+
+    .button-outline-md {
+        border-width: 1px;
+        border-style: solid;
+        border-color: #488aff;
+        color: #fff;
+        background-color: #488aff;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    
 }
