Alteração na listagem das categorias.

--- a/src/pages/categorias/categorias.scss
+++ b/src/pages/categorias/categorias.scss
@@ -113,4 +113,9 @@ page-categorias {
         display: block;
         background-color: aliceblue;
     }
+
+    ion-card img {
+        display: block;
+        width: 50px;
+    }
 }
